replaced deprecated stringutils method and minor cleanup (#738)