@@ -86,7 +86,6 @@ import jakarta.servlet.http.HttpServletResponse;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -681,11 +680,7 @@ public class AzureSecurityRealm extends SecurityRealm {
         LinkedList<Option> requestOptions = new LinkedList<>();
         String encodedGroupName = groupName
                 .replace("'", "''");
-        try {
-            encodedGroupName = URLEncoder.encode(encodedGroupName, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            LOGGER.log(Level.WARNING, "Failed to url encode query, group name was: " + groupName);
-        }
+        encodedGroupName = URLEncoder.encode(encodedGroupName, StandardCharsets.UTF_8);
 
         String query = String.format("displayName eq '%s'", encodedGroupName);
 
